<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OutletDetailsActivity">
    <item
        android:id="@+id/actionEditProfile"
        android:orderInCategory="100"
        android:title="@string/action_edit_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionRewards"
        android:orderInCategory="100"
        android:title="@string/action_rewards"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionFeedbackSummary"
        android:orderInCategory="100"
        android:title="@string/action_check_reports"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionSubscriptionInfo"
        android:orderInCategory="100"
        android:title="@string/action_subscription_info"
        app:showAsAction="never" />

</menu>
