<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Rating Details"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="#B74E55" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:background="#1486AC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <com.admin.view.CustomFontTextView
            android:id="@+id/userNameHeader"
            style="@style/ratingDetailHeaderColumn"
            android:text="@string/rating_user_name_header"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="#B74E55"
            android:textColor="@color/white"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="1dp" />
        <com.admin.view.CustomFontTextView
            android:id="@+id/userPhoneNumberHeader"
            style="@style/ratingDetailHeaderColumn"
            android:text="@string/rating_user_phone_number_header"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="#B74E55"
            android:textColor="@color/white"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="1dp" />
        <com.admin.view.CustomFontTextView
            android:id="@+id/billNumberHeader"
            style="@style/ratingDetailHeaderColumn"
            android:text="@string/rating_bill_number_header"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="#B74E55"
            android:textColor="@color/white"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="1dp" />
        <com.admin.view.CustomFontTextView
            android:id="@+id/billAmountHeader"
            style="@style/ratingDetailHeaderColumn"
            android:text="@string/rating_bill_amount_header"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:background="#B74E55"
            android:textColor="@color/white"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ratingDetailsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--<com.admin.view.CustomFontButton-->
        <!--android:id="@+id/ratingDetailsCloseButton"-->
        <!--style="@style/formButton"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:textSize="15dp"-->
        <!--android:text="Close"-->
        <!--android:elevation="0dp"-->
        <!--android:layout_gravity="right"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:background="@color/transparent"-->
        <!--android:textColor="#1486AC" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="CLOSE"
        android:id="@+id/ratingDetailsCloseButton"
        android:layout_gravity="right"
        android:layout_marginTop="26dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="16dp"
        android:background="@color/transparent"
        android:textColor="#1486AC"
        android:textSize="20dp" />

</LinearLayout>